--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="mem.js"> </script>
   </p>
   <p>
-    <button class="button marvoltbutton" onclick = "ujNapi()">Ez már volt, kérek egy újat!</button>
+    <!--<button class="button marvoltbutton" onclick = "ujNapi()">Ez már volt, kérek egy újat!</button>-->
   </p>
 </body>
 </html>
