--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <p>
     <script src="mem.js"> </script>
   </p>
-  <p>
-    <!--<button class="button marvoltbutton" onclick = "ujNapi()">Ez már volt, kérek egy újat!</button>-->
-  </p>
+   <!--<p>
+   <button class="button marvoltbutton" onclick = "ujNapi()">Ez már volt, kérek egy újat!</button>
+  </p>-->
 </body>
 </html>
